--- a/index.html
+++ b/index.html
@@ -4,13 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="WDD 230 - Web Frontend Development"
+        content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
+    <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 
 <body>
-    <h1>Welcome to WDD230 Web Projects</h1>
-    <a href="holygrail.html">week1</a>
+    <header>
+        <img id="profile" src="images/profile.jpg" alt="profile-photo">
+        <h1>Danilo Mayer</h1>
+    </header>
+
+    <nav>
+        <a class="navlink" href="#">Home</a>
+        <a class="navlink" href="lesson03/chamber-site-plan.html">Site Plan</a>
+        <a class="navlink" href="chamber/">Chamber</a>
+        <a class="navlink" href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
+        <a class="navlink" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=eng&id=p13#p13"
+            target="_blank">Scripture</a>
+    </nav>
+
+    <main>
+        <h2>WDD 230: Web Frontend Development</h2>
+        <section class="card">
+            <h3>Learning Activities</h3>
+            <ul>
+                <li><a href="">Activity 1</a></li>
+            </ul>
+        </section>
+        <section class="card">
+            <h3>Information</h3>
+            <!-- Information placeholders about the weather, number of visits to the page, etc. -->
+        </section>
+    </main>
+
+    <footer>
+        <p>Danilo Mayer &copy; 2024 Parana, Brazil</p>
+        <p id="lastModified"></p>
+    </footer>
+    <script src="scripts/getdates.js"></script>
 </body>
 
 </html>
