--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="WDD 230 - Web Frontend Development"
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
     <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
+    <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
 </head>
 
