added social media meta tags

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/base.css">
+    <meta property="og:title" content="Danilo Mayer - WDD 230 - Web Frontend Development">
+    <meta property="og:type" content="website">
+    <meta property="og:image"
+        content="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Ponta_Grossa_2019.jpg/270px-Ponta_Grossa_2019.jpg">
+    <meta property="og:url" content="https://danilomayer.github.io/wdd230/">
+
 </head>
 
 <body>
