added normalize.css to project

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
     <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <meta property="og:title" content="Danilo Mayer - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
