--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="">Activity 1</a></li>
+                <li><a href="lesson02/design.html"></a>lesson02</li>
             </ul>
         </section>
         <section class="card">
