fixed link on lesson02

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="">Activity 1</a></li>
-                <li><a href="lesson02/design.html"></a>lesson02</li>
+                <li><a href="lesson02/design.html">lesson02</a></li>
             </ul>
         </section>
         <section class="card">
