Finished body styles, added colors with contrast, fonts and grid. Date on footer with current year with JS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <a class="navlink" href="#">Home</a>
         <a class="navlink" href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a class="navlink" href="chamber/">Chamber</a>
-        <a class="navlink" href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
+        <a class="navlink" href="https://www.byui.edu/" target="_blank">BYU- Idaho</a>
         <a class="navlink" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=eng&id=p13#p13"
             target="_blank">Scripture</a>
     </nav>
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>Danilo Mayer &copy; 2024 Parana, Brazil</p>
+        <p>&copy; <span id="currentdate"></span> <br> Danilo Mayer <br> Parana, Brazil</p>
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
