added meta viewport

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" width="px">
     <meta name="WDD 230 - Web Frontend Development"
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
     <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
