--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <meta property="og:image"
         content="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Ponta_Grossa_2019.jpg/270px-Ponta_Grossa_2019.jpg">
     <meta property="og:url" content="https://danilomayer.github.io/wdd230/">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
