--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
     <meta name="viewport" width="px">
     <meta name="WDD 230 - Web Frontend Development"
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
-    <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
-    <link rel="icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/base.css">
     <meta property="og:title" content="Danilo Mayer - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image"
         content="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/Ponta_Grossa_2019.jpg/270px-Ponta_Grossa_2019.jpg">
     <meta property="og:url" content="https://danilomayer.github.io/wdd230/">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:wght@300&display=swap"
-        rel="stylesheet">
+    <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
+    <link rel="icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/larger.css">
+
+    <link rel="stylesheet" href="styles/base.css">
 </head>
 
 <body>
