--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/larger.css">
-
     <link rel="stylesheet" href="styles/base.css">
 </head>
 
@@ -42,6 +41,7 @@
             <ul>
                 <li><a href="">Activity 1</a></li>
                 <li><a href="lesson02/design.html">lesson02</a></li>
+                <li><a href="images/csscombinators.jpg">CSS Combinators</a></li>
             </ul>
         </section>
         <section class="card">
