css pseudo-elements activity link added to home page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <li><a href="">Activity 1</a></li>
                 <li><a href="lesson02/design.html">lesson02</a></li>
                 <li><a href="images/csscombinators.jpg">CSS Combinators</a></li>
+                <li><a href="https://codepen.io/Danilo-Mayer/pen/bGZrYrp">CSS Pseudo-elements</a></li>
             </ul>
         </section>
         <section class="card">
