--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <li><a href="lesson02/design.html">lesson02</a></li>
                 <li><a href="images/csscombinators.jpg">CSS Combinators</a></li>
                 <li><a href="https://codepen.io/Danilo-Mayer/pen/bGZrYrp">CSS Pseudo-elements</a></li>
+                <li><a href="https://codepen.io/Danilo-Mayer/pen/JjzyvxG?editors=1100">Responsive menu using
+                        'Hamburger'</a></li>
             </ul>
         </section>
         <section class="card">
