--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
         <h1>Danilo Mayer</h1>
     </header>
 
-    <nav>
-        <a class="navlink" href="#">Home</a>
+    <button id="menu"></button>
+    <nav class="navigation">
+        <a class="navlink" href="#" id="active">Home</a>
         <a class="navlink" href="lesson03/chamber-site-plan.html">Site Plan</a>
         <a class="navlink" href="chamber/">Chamber</a>
         <a class="navlink" href="https://www.byui.edu/" target="_blank">BYU- Idaho</a>
@@ -51,6 +52,11 @@
             <h3>Information</h3>
             <!-- Information placeholders about the weather, number of visits to the page, etc. -->
         </section>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234337.35820322635!2d-52.132853928758244!3d-23.405531619711027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ecd0d9132b0bf9%3A0x49a4970763bcf0e8!2sMaring%C3%A1%20-%20State%20of%20Paran%C3%A1!5e0!3m2!1sen!2sbr!4v1706148396925!5m2!1sen!2sbr"
+            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
     </main>
 
     <footer>
@@ -58,6 +64,7 @@
         <p id="lastModified"></p>
     </footer>
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/hamburguermenu.js"></script>
 </body>
 
 </html>
