added link to site plan in the home page

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 <li><a href="https://codepen.io/Danilo-Mayer/pen/bGZrYrp">CSS Pseudo-elements</a></li>
                 <li><a href="https://codepen.io/Danilo-Mayer/pen/JjzyvxG?editors=1100">Responsive menu using
                         'Hamburger'</a></li>
+                <li><a href="lesson03/chamber-site-plan.html">Chamber of Commerce Site-plan</a></li>
             </ul>
         </section>
         <section class="card">
