--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <li><a href="https://codepen.io/Danilo-Mayer/pen/JjzyvxG?editors=1100">Responsive menu using
                         'Hamburger'</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber of Commerce Site-plan</a></li>
+                <li><a href="chamber/index.html">Maringa Chamber of Commerce</a></li>
             </ul>
         </section>
         <section class="card">
