fixed typing errors

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" width="px">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="CCM - Chamber of Commerce of Maringa"
         content="Page dedicated to the association that promotes the commercial development of the city of Maringa.">
     <meta property="og:title" content="CCM - Chamber of Commerce of Maringa">
@@ -25,7 +25,7 @@
 <body>
     <div id="content">
         <header>
-            <img src="" alt="logo-img" class="logo-img">
+            <img src="blank" alt="logo-img" class="logo-img">
             <a href="" class="join">JOIN</a>
         </header>
 
@@ -37,7 +37,7 @@
 
         <div id="hero">
             <div id="hero-box">
-                <img src="" alt="">
+                <img src="blank" alt="">
             </div>
             <div id="hero-msg">
                 <h1 class="chamber-title">Title for the Hero Image</h1>
