--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" width="px">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="WDD 230 - Web Frontend Development"
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
     <meta property="og:title" content="Danilo Mayer - WDD 230 - Web Frontend Development">
