--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                         'Hamburger'</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber of Commerce Site-plan</a></li>
                 <li><a href="chamber/index.html">Maringa Chamber of Commerce</a></li>
+                <li><a href="lesson05/bom.html">BOM Favorite Chapter</a></li>
+
             </ul>
         </section>
         <section class="card">
