--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -17,14 +17,16 @@
 </head>
 
 <body>
-    <h1>📖 Book of Mormon - Top 10</h1>
-    <main>
-        <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" placeholder="Alma 5">
-        <button type="submit">Add Chapter</button>
-        <ul id="list"></ul>
-    </main>
-    <script src="scripts/bom.js"></script>
+    <div>
+        <h1>📖 Book of Mormon - Top 10</h1>
+        <main>
+            <label for="favchap">Enter Book and Chapter: </label>
+            <input type="text" id="favchap" placeholder="Alma 5">
+            <button type="submit">Add Chapter</button>
+            <ul id="list"></ul>
+        </main>
+    </div>
 </body>
+<script src="scripts/bom.js"></script>
 
 </html>
