author meta tag added

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Danilo Mayer">
     <meta name="CCM - Chamber of Commerce of Maringa"
         content="Page dedicated to the association that promotes the commercial development of the city of Maringa.">
     <meta property="og:title" content="CCM - Chamber of Commerce of Maringa">
@@ -40,13 +41,13 @@
                 <img src="blank" alt="">
             </div>
             <div id="hero-msg">
-                <h1 class="chamber-title">Title for the Hero Image</h1>
+                <h1 class="chamber-title">Welcome to the Chamber of Commerce of Maringa</h1>
             </div>
         </div>
 
         <main>
             <div id="current-event">
-                <h2>Current Events</h2>
+                <h2>Events and Conferences</h2>
             </div>
 
             <div id="weather-card">
