--- a/chamber/index.html
+++ b/chamber/index.html
@@ -68,7 +68,9 @@
                 <p><span id="lastModified"></span></p>
             </div>
             <div id="social">
-                Social media
+                Social media <br>
+                <p>Contact us @</p>
+                <p>#888 777 6655</p>
             </div>
         </footer>
         <script src="scripts/getdates.js"></script>
