hamburguer button added, improved styling on both large and small views

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -26,11 +26,12 @@
 <body>
     <div id="content">
         <header>
-            <img src="blank" alt="logo-img" class="logo-img">
+            <img src="" alt="logo-img" class="logo-img">
             <a href="" class="join">JOIN</a>
         </header>
 
-        <nav>
+        <button id="ham"></button>
+        <nav class="navigation">
             <a href="" class="menu">MENU</a>
             <a href="" class="discover">DISCOVER</a>
             <a href="" class="directory">DIRECTORY</a>
@@ -38,7 +39,7 @@
 
         <div id="hero">
             <div id="hero-box">
-                <img src="blank" alt="">
+                <img src="" alt="">
             </div>
             <div id="hero-msg">
                 <h1 class="chamber-title">Welcome to the Chamber of Commerce of Maringa</h1>
@@ -74,6 +75,7 @@
             </div>
         </footer>
         <script src="scripts/getdates.js"></script>
+        <script src="scripts/hambutton.js"></script>
         <!--Script below must be finished and debugged-->
         <script>
             const options = { day: 'numeric', month: 'short', year: 'numeric' };
