WebP landscape image link added to home page

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <li><a href="lesson03/chamber-site-plan.html">Chamber of Commerce Site-plan</a></li>
                 <li><a href="chamber/index.html">Maringa Chamber of Commerce</a></li>
                 <li><a href="lesson05/bom.html">BOM Favorite Chapter</a></li>
+                <li><a href="lesson03/images/landscape.webp">WebP</a></li>
 
             </ul>
         </section>
