--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li><a href="chamber/index.html">Maringa Chamber of Commerce</a></li>
                 <li><a href="lesson05/bom.html">BOM Favorite Chapter</a></li>
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
+                <li><a href="lesson06/responsive-images.html">Responsive Images: srcset</a></li>
 
             </ul>
         </section>
