finally learned how to make the navigation bar responsive on large and small screens and fixed the map looks

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <title>Danilo Mayer - WDD 230 - Web Frontend Development</title>
     <link rel="icon" href="images/favicon.webp">
     <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 </head>
 
 <body>
@@ -69,10 +69,13 @@
             <h3>Information</h3>
             <!-- Information placeholders about the weather, number of visits to the page, etc. -->
         </section>
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234337.35820322635!2d-52.132853928758244!3d-23.405531619711027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ecd0d9132b0bf9%3A0x49a4970763bcf0e8!2sMaring%C3%A1%20-%20State%20of%20Paran%C3%A1!5e0!3m2!1sen!2sbr!4v1706148396925!5m2!1sen!2sbr"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+        <div class="map">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d234337.35820322635!2d-52.132853928758244!3d-23.405531619711027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ecd0d9132b0bf9%3A0x49a4970763bcf0e8!2sMaring%C3%A1%20-%20State%20of%20Paran%C3%A1!5e0!3m2!1sen!2sbr!4v1706148396925!5m2!1sen!2sbr"
+                style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
 
     </main>
 
