meta author tag added on main page and bom page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="WDD 230 - Web Frontend Development"
         content="Course assignment portal page, developed by student Danilo Mayer in an effort to present Web Development skills">
+    <meta name=" author" content="Danilo Mayer">
     <meta property="og:title" content="Danilo Mayer - WDD 230 - Web Frontend Development">
     <meta property="og:type" content="website">
     <meta property="og:image"
