--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Book of Mormon favorite chapter application" content="Exercise using the Book Of Mormon">
+    <meta name=" author" content="Danilo Mayer">
     <meta property="og:title" content="Exercise using the Book Of Mormon">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://danilomayer.github.io/wdd230/">
