Navigation finalized and dark mode was added to home page

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,6 +27,9 @@
     <div id="content">
         <header>
             <img src="images/c2636a763be04804b3b2530031452004.webp" alt="logo-img" class="logo-img">
+            <div id="mode">
+                🕶️
+            </div>
         </header>
         <!--id ham == MENU ---- class menu = navlink-->
         <button id="menu"></button>
@@ -76,6 +79,7 @@
         </footer>
         <script src="scripts/getdates.js"></script>
         <script src="scripts/hambutton.js"></script>
+        <script src="scripts/darkmode.js"></script>
         <!--Script below must be finished and debugged-->
         <!--<script>
             const options = { day: 'numeric', month: 'short', year: 'numeric' };
