favicon optimized to webp, max width on larger screen updated to 1500px

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,7 +16,7 @@
     <meta name="description"
         content="Page dedicated to the association that promotes the commercial development of the city of Maringa.">
     <title>CCM - Chamber of Commerce of Maringa</title>
-    <link rel="icon" href="images/favicon.ico">
+    <link rel="icon" href="images/favicon.webp">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
