--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li><a href="lesson05/bom.html">BOM Favorite Chapter</a></li>
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive Images: srcset</a></li>
+                <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
 
             </ul>
         </section>
