discover page created

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -35,16 +35,16 @@
         <button id="menu"></button>
         <nav class="navigation">
             <a href="" class="navlink">HOME</a>
-            <a href="discover.html" class="navlink" target="_blank">DISCOVER</a>
+            <a href="" class="navlink" target="_blank">DISCOVER</a>
             <a href="" class="navlink" target="_blank">DIRECTORY</a>
             <a href="" class="navlink" target="_blank">JOIN</a>
         </nav>
 
         <div class="hero">
             <picture>
-                <source media="(max-width: 500px)" srcset="images/Maringá-City-HeroSmall.webp">
-                <source media="(max-width: 850px)" srcset="images/Maringá-City-Hero.webp">
-                <img src="images/Maringá-City-Hero.webp" alt="Maringa Downtown">
+                <source media="(max-width: 500px)" srcset="images/herotest.webp">
+                <source media="(max-width: 850px)" srcset="images/herotest.webp">
+                <img src="images/herotest.webp" alt="Maringa Downtown">
             </picture>
             <div class="herolabel">
                 <p>Maringa Downtown</p>
@@ -54,15 +54,6 @@
         <main>
             <div id="current-event">
                 <h2>Events and Conferences</h2>
-                <p>Bacon ipsum dolor amet brisket t-bone rump tail venison capicola chuck short ribs shoulder pork. Tail
-                    hamburger prosciutto, ham swine burgdoggen doner kielbasa. Landjaeger t-bone pancetta, sirloin
-                    fatback frankfurter tri-tip andouille buffalo hamburger corned beef shank ground round. Turkey pork
-                    chop hamburger, beef ribs doner tenderloin filet mignon cow pig tongue meatloaf. Strip steak alcatra
-                    tongue, swine meatball tail burgdoggen. Beef ribs meatloaf leberkas chicken pork.
-                    <br>
-                    Cow salami ground round frankfurter shankle. Burgdoggen meatloaf boudin short ribs cupim pancetta.
-                    Landjaeger swine rump alcatra, boudin pork loin pastrami. Meatball kielbasa doner chislic.
-                </p>
             </div>
 
             <div id="weather-card">
