--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <li><a href="lesson03/images/landscape.webp">WebP</a></li>
                 <li><a href="lesson06/responsive-images.html">Responsive Images: srcset</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
-
+                <li><a href="lesson08/tablebuild.html">Table Build</a></li>
             </ul>
         </section>
         <section class="card">
