Errors with caption fixed on table build page

--- a/lesson08/tablebuild.html
+++ b/lesson08/tablebuild.html
@@ -10,6 +10,9 @@
 
 <body>
     <table>
+        <caption>
+            Table 1: Account Feature Comparison
+        </caption>
         <thead>
             <tr>
                 <th colspan="4" scope="colgroup">ACME Wildwest Services</th>
@@ -42,8 +45,9 @@
                 <td>✔</td>
             </tr>
         </tbody>
+
     </table>
-    <caption>Table 1: Account Feature Comparison</caption>
+
 </body>
 
 </html>
