form link added to home page

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                 <li><a href="lesson06/responsive-images.html">Responsive Images: srcset</a></li>
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
                 <li><a href="lesson08/tablebuild.html">Table Build</a></li>
+                <li><a href="lesson08/form-start/index.html">Form Build</a></li>
             </ul>
         </section>
         <section class="card">
