--- a/lesson08/form-start/thanks.html
+++ b/lesson08/form-start/thanks.html
@@ -12,9 +12,10 @@
     <meta name="description" content="Fill Me In">
     <meta name="author" content="John Doe">
 
-    <link href="styles/normalize.css" rel="stylesheet">
-    <link href="styles/base.css" rel="stylesheet">
-    <link href="styles/larger.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
+    <link rel="stylesheet" href="css/normalize.css">
 
 </head>
 
