--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
     <nav class="navigation">
         <a class="navlink" href="#" id="active">Home</a>
         <a class="navlink" href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a class="navlink" href="chamber/">Chamber</a>
+        <a class="navlink" href="chamber/index.html">Chamber</a>
         <a class="navlink" href="https://www.byui.edu/" target="_blank">BYU- Idaho</a>
         <a class="navlink" href="https://www.churchofjesuschrist.org/study/scriptures/bofm/3-ne/5?lang=eng&id=p13#p13"
             target="_blank">Scripture</a>
+        <a class="navlink" href="form.html" target="_blank">Join</a>
+
     </nav>
 
     <div class="hero">
