--- a/chamber/index.html
+++ b/chamber/index.html
@@ -37,7 +37,7 @@
             <a href="" class="navlink">HOME</a>
             <a href="discover.html" class="navlink" target="_blank">DISCOVER</a>
             <a href="" class="navlink" target="_blank">DIRECTORY</a>
-            <a href="" class="navlink" target="_blank">JOIN</a>
+            <a href="join.html" class="navlink" target="_blank">JOIN</a>
         </nav>
 
         <div class="hero">
