--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -34,10 +34,10 @@
 
         <button id="menu"></button>
         <nav class="navigation">
-            <a href="" class="navlink">HOME</a>
+            <a href="index.html" class="navlink">HOME</a>
             <a href="" class="navlink" target="_blank">DISCOVER</a>
             <a href="" class="navlink" target="_blank">DIRECTORY</a>
-            <a href="" class="navlink" target="_blank">JOIN</a>
+            <a href="join.html" class="navlink" target="_blank">JOIN</a>
         </nav>
 
         <div class="hero">
