Created Json file with ward information and added link to home page

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <li><a href="lesson07/lazyload.html">Lazy Loading</a></li>
                 <li><a href="lesson08/tablebuild.html">Table Build</a></li>
                 <li><a href="lesson08/form-start/index.html">Form Build</a></li>
+                <li><a href="lesson09/new-ward-members.json">Json</a></li>
             </ul>
         </section>
         <section class="card">
