page with prophets list created using fetch api, styles and js used, link added to home page

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <li><a href="lesson08/tablebuild.html">Table Build</a></li>
                 <li><a href="lesson08/form-start/index.html">Form Build</a></li>
                 <li><a href="lesson09/new-ward-members.json">Json</a></li>
+                <li><a href="lesson09/prophets.html">The Fetch API</a></li>
             </ul>
         </section>
         <section class="card">
