--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     </footer>
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburguermenu.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
